Fixes ACM-2269 where expandable titles in hypershift cluster details in dark mode had bad contrast

--- a/frontend/src/routes/Infrastructure/Clusters/ManagedClusters/components/OnboardingModal.css
+++ b/frontend/src/routes/Infrastructure/Clusters/ManagedClusters/components/OnboardingModal.css
@@ -5,3 +5,7 @@
 .pf-c-modal-box__footer {
     padding: 0px;
 }
+
+:root:where(.pf-theme-dark) .pf-c-expandable-section__toggle-text {
+    color: #FFFFFF;
+}
